update dept pics

--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -28,7 +28,7 @@
   background: url(../../../../public/images/power.jpg) no-repeat center;
 }
 .program6 {
-  background: url(../../../../public/images/ycs.jpg) no-repeat center;
+  background: url(../../../../public/images/YOUTH.png) no-repeat center;
 }
 .pic{
   width: 50%;
