update service page

--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -30,6 +30,9 @@
 .program6 {
   background: url(../../../../public/images/YOUTH.png) no-repeat center;
 }
+.program7 {
+  background: url(../../../../public/images/holy-communion.jpg) no-repeat center;
+}
 .pic{
   width: 50%;
   height: 110dvh;
