--- a/web-app/src/app/(ministries)/departments/departments.module.css
+++ b/web-app/src/app/(ministries)/departments/departments.module.css
@@ -64,8 +64,8 @@
 }
 @media screen and (max-width: 599px) {
    #department {
-    background-image: none;
-    background-color: var(--tertiary-100);
+    background: url(../../../../public/images/hero.png) no-repeat center;
+    background-size: cover;
   }
 }
 
