--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -304,8 +304,8 @@
 
 @media screen and (max-width: 599px) {
    #admin {
-    background-image: none;
-    background-color: var(--tertiary-100);
+    background: url(../../../../public/images/hero.png) no-repeat center;
+    background-size: cover;
   }
 }
 
