--- a/web-app/src/app/(pages)/faq/faq.module.css
+++ b/web-app/src/app/(pages)/faq/faq.module.css
@@ -86,8 +86,8 @@
 }
 @media screen and (max-width: 599px) {
    #faq {
-    background-image: none;
-    background-color: var(--tertiary-100);
+    background: url(../../../../public/images/hero.png) no-repeat center;
+    background-size: cover;
   }
 }
 /* Small mobile (≤480px) */
