--- a/web-app/src/app/(services)/announcements/announcement.module.css
+++ b/web-app/src/app/(services)/announcements/announcement.module.css
@@ -215,8 +215,8 @@ p.ministering span{
   }
 
    #announcement {
-    background-image: none;
-    background-color: var(--tertiary-100);
+    background: url(../../../../public/images/hero.png) no-repeat center;
+    background-size: cover;
   }
 }
 
