--- a/web-app/src/app/location/location.module.css
+++ b/web-app/src/app/location/location.module.css
@@ -85,8 +85,8 @@
 
 @media screen and (max-width: 599px) {
    #location {
-    background-image: none;
-    background-color: var(--tertiary-100);
+    background: url(../../../public/images/hero.png) no-repeat center;
+    background-size: cover;
   }
 }
 
