--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -33,6 +33,9 @@
 .program7 {
   background: url(../../../../public/images/holy-communion.jpg) no-repeat center;
 }
+.program8 {
+  background: url(../../../../public/images/houseFellowsip.jpg) no-repeat center;
+}
 .pic{
   width: 50%;
   height: 110dvh;
